tests/errors/sem_test_6.py
# sem_test6.py
def main():
    a = 4 + 5
    print(a)

main(5, 3)